[package]
name = "bevy_wasm_pack"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9"
log = "0.4"
xtask-wasm = { version = "0.1.6", features = ["wasm-opt"]}
walkdir = "2.3"
lazy_static = "1.4"
cargo_metadata = "0.15"
bytesize = { version = "1.1", default-features = false}

[patch.crates-io]
#binary-install = { git = "https://github.com/johanhelsing/binary-install" }
xtask-wasm = { git = "https://github.com/johanhelsing/xtask-wasm", branch = "fix-wasm-opt" }
